--- a/exam/package.json
+++ b/exam/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "devDependencies": {
     "gulp": "^4.0.0",
-    "gulp-sass": "^4.0.2"
+    "gulp-sass": "^4.0.2",
+    "gulp-webserver": "^0.9.1"
   }
 }
